# paperless-mcp

./: .dprint.jsonc  .gitattributes  .gitignore  .markdownlint.json  .mcp.json  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  download-schema.ts  dprint.jsonc  openapi-ts.config.ts  package-lock.json  package.json  pyproject.toml  smithery.yaml  tombi.toml  tsconfig.json
.github/workflows/: docker-build.yml  docker-publish.yml  npm-publish.yml  pkg-pr-new.yml  release-notes.yml  schema-check.yml  schema-update.yml
.opencode/: opencode.jsonc
.zed/: settings.json
schemas/: openapi.json  subset.json
scripts/: meta.sh  openapi.py  release-notes.mjs
scripts/openapi/: README.md  main.py
skills/paperless-ngx/: SKILL.md
skills/paperless-ngx/references/: query-syntax.md  tools.md  workflows.md
skills/paperless-ngx/scripts/: encode-file.sh  test-connection.sh
specs/: migrate-to-fastmcp.md
src/: index.ts  resources.ts  schema.ts  types.ts
src/api/: AGENTS.md  PaperlessAPI.test.ts  PaperlessAPI.ts  paperless-api.test.ts  paperless-api.ts  paperless.test.ts  paperless.ts
src/tools/: AGENTS.md  correspondents.ts  customFields.ts  documentTypes.ts  documents.ts  mail.ts  storagePaths.ts  tags.ts  tasks.ts  trash.ts  utils.ts
